# xlimsprep

./: .gitignore  LICENSE  README.md  main.ps1  main.sh  pyproject.toml  requirements.txt  rollout.md  rollout.ps1
configs/: exclude_variables.toml  show_parameter_lists.toml
docs/: CHANGELOG.md
exports/: operations.csv  plant_effluent.csv  plant_influent.csv  primary_effluent.csv  primary_influent.csv  trickling_filter_effluent.csv  trickling_filter_influent.csv
exports_June2024-May2025/: plant_effluent_xlims.csv  plant_influent_xlims.csv  primary_effluent_xlims.csv  primary_influent_xlims.csv  trickling_filter_effluent_xlims.csv  trickling_filter_influent_xlims.csv
exports_June2024-May2025b/: operations_xlims.csv
imports/: TEM ABF Effluent April 2026.csv  TEM ABF Effluent April 2026.csv:Zone.Identifier  operations_xlims.csv  plant_effluent.csv  plant_effluent_xlims.csv  primary_effluent_xlims.csv  trickling_filter_effluent.csv
imports-mystery/: operations.csv  plant_influent.csv  primary_effluent.csv  primary_influent.csv
imports_August2025-January2026/: xlims_ABFI_08012025-01092026.csv
imports_June2024-May2025/: plant_influent_xlims.csv  primary_influent_xlims.csv  trickling_filter_effluent_xlims.csv  trickling_filter_influent_xlims.csv
page/: index.html  styles.css
src/: config.py  exporter.py  helpers.py  importer.py  main.py  plotter.py  sanitizer.py  view.py  webplotter.py  xplor.py
webpage/: index.html
webpage/graphs/: operations_xlims.html  plant_effluent_xlims.html  plant_influent_xlims.html  primary_effluent_xlims.html  (+3 more)
