[project]
name = "xlimsprep"
version = "0.1.1"
description = "This program is meant for sanitizing and plotting data exported from the X-LIMS system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "fonttools>=4.58.1",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.3",
    "narwhals>=1.41.0",
    "numpy>=2.2.6",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "toml>=0.10.2",
    "tzdata>=2025.2"
]
